wrong username fix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=hellospringboot
-spring.datasource.url=jdbc:postgresql://localhost:5332/postgresql
-spring.datasource.username=postgresql
+spring.datasource.url=jdbc:postgresql://localhost:5332/postgres
+spring.datasource.username=postgres
 spring.datasource.password=Evergreen!@1992
 spring.datasource.driver-class-name=org.postgresql.Driver
 
