--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=hellospringboot
 spring.datasource.url=jdbc:postgresql://localhost:5332/postgres
 spring.datasource.username=postgres
-spring.datasource.password=Evergreen!@1992
+spring.datasource.password=password123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=create-drop
