--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
 			<groupId>org.springframework.ai</groupId>
 			<artifactId>spring-ai-openai-spring-boot-starter</artifactId>
 		</dependency>
+
+		<dependency>
+  			<groupId>io.github.cdimascio</groupId>
+  			<artifactId>java-dotenv</artifactId>
+  			<version>5.2.2</version>
+		</dependency>
 		
 	</dependencies>
 
