--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
-spring.ai.openai.api-key=${OPEN_AI_KEY}
+spring.ai.openai.api-key=${OPENAI_API_KEY}
